custom-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APPNAME
  namespace: $NAMESPACE
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: $APPNAME
  replicas: 1
  template:
    metadata:
      labels:
        app: $APPNAME
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
      containers:
        - name: $APPNAME
          image: $IMAGE
          volumeMounts:
            - mountPath: /home/maps
              name: maps
          ports:
            - containerPort: 8080
      volumes:
        - name: maps
          persistentVolumeClaim:
            claimName: pvc-maps
---
apiVersion: v1
kind: Service
metadata:
  name: $APPNAME-service
  namespace: $NAMESPACE
spec:
  selector:
    app: $APPNAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $APPNAME-ingress
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/$APPNAME/docs/?$ /$APPNAME/docs/index.html?url=/$APPNAME/docs/docs.yaml permanent;
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
    - host: scala-school-final.dins.ru
      http:
        paths:
          - backend:
              serviceName: $APPNAME-service
              servicePort: 80
            path: /$APPNAME(/|$)(.*)
